force-app/main/default/objects/GoToWebinar__mdt/GoToWebinar__mdt.object-meta.xml
<CustomObject>
    <label>GoToWebinar</label>
    <pluralLabel>GoToWebinar</pluralLabel>
</CustomObject>