force-app/main/default/objects/GoToWebinar__mdt/fields/Account_Key__c.field-meta.xml
<CustomField>
    <fullName>Account_Key__c</fullName>
    <label>Account Key</label>
    <length>30</length>
    <type>Text</type>
</CustomField>