force-app/main/default/objects/GoToWebinar__mdt/fields/Authentication_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Authentication_Endpoint__c</fullName>
    <label>Authentication Endpoint</label>
    <length>100</length>
    <type>Text</type>
</CustomField>