force-app/main/default/objects/GoToWebinar__mdt/fields/Organizer_Key__c.field-meta.xml
<CustomField>
    <fullName>Organizer_Key__c</fullName>
    <label>Organizer Key</label>
    <length>30</length>
    <type>Text</type>
</CustomField>