force-app/main/default/objects/GoToWebinar__mdt/fields/Redirect_URL__c.field-meta.xml
<CustomField>
    <fullName>Redirect_URL__c</fullName>
    <label>Redirect URL</label>
    <length>120</length>
    <type>Text</type>
</CustomField>