force-app/main/default/objects/GoToWebinar__mdt/fields/Token_Created_Time__c.field-meta.xml
<CustomField>
    <fullName>Token_Created_Time__c</fullName>
    <label>Token Created Time</label>
    <type>DateTime</type>
</CustomField>