force-app/main/default/objects/GoToWebinar__mdt/fields/Token_Expire_Time__c.field-meta.xml
<CustomField>
    <fullName>Token_Expire_Time__c</fullName>
    <label>Token Expire Time</label>
    <type>DateTime</type>
</CustomField>