force-app/main/default/objects/GoToWebinar__mdt/fields/Webhook_Key_Added__c.field-meta.xml
<CustomField>
    <fullName>Webhook_Key_Added__c</fullName>
    <label>Webhook Key Added</label>
    <length>100</length>
    <type>Text</type>
</CustomField>