force-app/main/default/objects/GoToWebinar__mdt/fields/Webhook_Key_Joined__c.field-meta.xml
<CustomField>
    <fullName>Webhook_Key_Joined__c</fullName>
    <label>Webhook Key Joined</label>
    <length>100</length>
    <type>Text</type>
</CustomField>